fixing issue with timeseries not showing path

--- a/js/dashboard/src/views/relative_timing/relative_timing.css
+++ b/js/dashboard/src/views/relative_timing/relative_timing.css
@@ -76,7 +76,7 @@ margin-left: -20px;
   /*padding-bottom:80px*/
 }
 .stream-wrap {
-  
+  display:inline-block
 }
 .stream-wrap .inner {
   margin-top:-60px
